--- a/index.html
+++ b/index.html
@@ -27,16 +27,96 @@
             <span class="hero__subtitle">Эпизод IX</span>
             <h1 class="hero__title">Скайуокер. Восход</h1>
             <p class="hero__description">
-                Фильм завершает невероятную историю семьи Скайуокеров, длящуюся уже более сорока лет, и обещает дать ответы на все загадки из предыдущих серий. Зрителя ожидают старые и новые герои, уникальные миры, увлекательные путешествия на край Галактики и грандиозный финал фантастической саги
+                Фильм завершает невероятную историю семьи Скайуокеров, длящуюся уже более сорока лет, и обещает дать
+                ответы на все загадки из предыдущих серий. Зрителя ожидают старые и новые герои, уникальные миры,
+                увлекательные путешествия на край Галактики и грандиозный финал фантастической саги
             </p>
             <span class="hero__premier">Премьера</span>
             <span class="hero__date">19 декабря 2019</span>
-            <button class="button-play hero__button-play">Смотреть трейлер</button>
+            <a class="button-play hero__button-play" data-fancybox href="https://www.youtube.com/watch?v=KVRBfWQgyuY">
+                Смотреть трейлер
+            </a>
         </div>
+
+        <div class="episodes">
+            <h2 class="episodes__title">Предыдущие эпизоды</h2>
+            <div class="slider">
+                <div class="slider__item">
+                    <div class="slider__year">1977</div>
+                    <h3 class="slider__title">Эпизод IV: <br> Новая надежда</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle4.svg" alt="Episode4" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">1980</div>
+                    <h3 class="slider__title">Эпизод V: <br> Империя наносит ответный удар</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle5.svg" alt="Episode5" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">1983</div>
+                    <h3 class="slider__title">Эпизод VI: <br> Возвращение джедая</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle6.svg" alt="Episode6" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">1999</div>
+                    <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle1.svg" alt="Episode1" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">2002</div>
+                    <h3 class="slider__title">Эпизод II: <br> Атака клонов</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle2.jpg" alt="Episode2" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">2005</div>
+                    <h3 class="slider__title">Эпизод III: <br> Месть ситхов</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle3.jpg" alt="Episode3" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">2015</div>
+                    <h3 class="slider__title">Эпизод VII: <br> Пробуждение силы</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle7.jpg" alt="Episode7" class="slider__image">
+                </div>
+                <div class="slider__item">
+                    <div class="slider__year">2017</div>
+                    <h3 class="slider__title">Эпизод VIII: <br> Последние Джедаи</h3>
+                    <div class="slider__rating">
+                        <span class="slider__rating-label">Рейтинг</span>
+                    </div>
+                    <img src="img/Rectangle8.png" alt="Episode8" class="slider__image">
+                </div>
+            </div>
+        </div>
+        <!-- /.episodes -->
     </main>
 
 </div>
 <!-- /.container -->
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
 
 </body>
 </html>
