--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт фильма "Звездные войны"</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 
@@ -15,17 +16,17 @@
     <header class="header">
         <img src="img/logo.svg" alt="logo" class="logo header__logo">
         <nav class="nav">
-            <a href="#" class="nav__link">Билеты</a>
-            <a href="#" class="nav__link">О фильме</a>
-            <a href="#" class="nav__link">Отзывы</a>
-            <a href="#" class="nav__link">Трейлеры</a>
+            <a href="#description" class="nav__link">О фильме</a>
+            <a href="#trailer" class="nav__link">Трейлер</a>
+            <a href="#otherfilms" class="nav__link">Предыдущие эпизоды</a>
         </nav>
     </header>
 
     <main>
         <div class="hero">
-            <span class="hero__subtitle">Эпизод IX</span>
-            <h1 class="hero__title">Скайуокер. Восход</h1>
+            <a name="description"></a>
+            <span class="hero__subtitle animated fadeInLeft">Эпизод IX</span>
+            <h1 class="hero__title animated fadeInLeft">Скайуокер. Восход</h1>
             <p class="hero__description">
                 Фильм завершает невероятную историю семьи Скайуокеров, длящуюся уже более сорока лет, и обещает дать
                 ответы на все загадки из предыдущих серий. Зрителя ожидают старые и новые герои, уникальные миры,
@@ -33,78 +34,137 @@
             </p>
             <span class="hero__premier">Премьера</span>
             <span class="hero__date">19 декабря 2019</span>
-            <a class="button-play hero__button-play" data-fancybox href="https://www.youtube.com/watch?v=KVRBfWQgyuY">
-                Смотреть трейлер
-            </a>
+            <div class="button animated pulse">
+                <a name="trailer" class="button-play hero__button-play" data-fancybox href="https://www.youtube.com/watch?v=KVRBfWQgyuY">
+                    Смотреть трейлер
+                </a>
+            </div>
         </div>
 
         <div class="episodes">
+            <a name="otherfilms"></a>
             <h2 class="episodes__title">Предыдущие эпизоды</h2>
-            <div class="slider">
-                <div class="slider__item">
+            <div class="slider owl-carousel">
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=qN_zXquollQ">
                     <div class="slider__year">1977</div>
                     <h3 class="slider__title">Эпизод IV: <br> Новая надежда</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle4.svg" alt="Episode4" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=7ZjN5TiYzuI">
                     <div class="slider__year">1980</div>
                     <h3 class="slider__title">Эпизод V: <br> Империя наносит ответный удар</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle5.svg" alt="Episode5" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=juH_QsXNbEs">
                     <div class="slider__year">1983</div>
                     <h3 class="slider__title">Эпизод VI: <br> Возвращение джедая</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle6.svg" alt="Episode6" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=pxLVXj_qqrM">
                     <div class="slider__year">1999</div>
                     <h3 class="slider__title">Эпизод I: <br> Скрытая угроза</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle1.svg" alt="Episode1" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=5v5pA0S3_zk">
                     <div class="slider__year">2002</div>
                     <h3 class="slider__title">Эпизод II: <br> Атака клонов</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle2.jpg" alt="Episode2" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=Uz_SI5JC5-Q">
                     <div class="slider__year">2005</div>
                     <h3 class="slider__title">Эпизод III: <br> Месть ситхов</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle3.jpg" alt="Episode3" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=c6fsBB_rPXQ">
                     <div class="slider__year">2015</div>
                     <h3 class="slider__title">Эпизод VII: <br> Пробуждение силы</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle7.jpg" alt="Episode7" class="slider__image">
-                </div>
-                <div class="slider__item">
+                </a>
+                <a class="slider__item" data-fancybox href="https://www.youtube.com/watch?v=gcIdWujuxuM">
                     <div class="slider__year">2017</div>
                     <h3 class="slider__title">Эпизод VIII: <br> Последние Джедаи</h3>
                     <div class="slider__rating">
                         <span class="slider__rating-label">Рейтинг</span>
+                        <span class="slider__rating-stars">
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star"></i>
+                            <i class="star star-0"></i>
+                        </span>
                     </div>
                     <img src="img/Rectangle8.png" alt="Episode8" class="slider__image">
-                </div>
+                </a>
             </div>
         </div>
         <!-- /.episodes -->
@@ -116,7 +176,8 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-
-
+<link rel="stylesheet" href="css/owl.carousel.min.css">
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
